2014-08-14  Bin Cheng  <bin.cheng@arm.com>

	* libc/stdio/findfp.c (std): Don't inline when optimizing for code size.

2014-08-04  Jon TURNEY  <jon.turney@dronecode.org.uk>

	* libc/include/math.h: Also define M_PI etc. if _XOPEN_SOURCE is
	defined appropriately.

2014-08-01  Eric Blake  <eblake@redhat.com>

	* libc/machine/spu/spu_timer_internal.h: Decorate attribute names
	with __, for namespace safety.
	* libc/machine/xscale/machine/profile.h: Likewise.
	* libc/include/stdlib.h: Likewise.
	* libc/include/_ansi.h: Likewise.
	* libc/include/sys/unistd.h: Likewise.
	* libc/sys/linux/linuxthreads/libc-symbols.h: Likewise.
	* libc/sys/linux/linuxthreads/internals.h: Likewise.
	* libc/sys/linux/machine/i386/weakalias.h: Likewise.
	* libc/sys/linux/machine/i386/dl-procinfo.h: Likewise.
	* libc/sys/linux/machine/i386/dl-machine.h: Likewise.
	* libc/sys/linux/libc-symbols.h: Likewise.
	* libc/sys/linux/iconv/gconv_charset.h: Likewise.
	* libc/sys/linux/include/resolv.h: Likewise.
	* libc/sys/linux/sys/unistd.h: Likewise.
	* libc/sys/linux/dl/atomicity.h: Likewise.
	* libc/sys/linux/dl/dynamic-link.h: Likewise.
	* libc/sys/linux/dl/ldsodefs.h: Likewise.

2014-07-30  Corinna Vinschen  <vinschen@redhat.com>

	* libc/string/strerror.c: Fix documentation so makedoc doesn't
	stumble over a sole EAGAIN.

2014-07-27  Anthony Green  <green@moxielogic.com>

	* configure.host: Add moxie-*-moxiebox target.

2014-07-22  Joel Sherrill <joel.sherrill@oarcorp.com>

	* libc/include/sys/time.h: Add prototype for adjtime() and
	wrap it and settimeofday() prototype with __BSD_VISIBLE.

2014-07-17  Hesham ALMatary <heshamelmatary@gmail.com>

	* configure.host: Remove or16 and or32 targets and add or1k.
	* libc/include/machine/ieeefp.h: Replace or32 with or1k.
	* libc/machine/configure.in: Add or1k subdirectory.
	* libc/machine/configure: Regenerate.
	* libc/machine/or1k/configure.in: New file.
	* libc/machine/or1k/configure: New file.
	* libc/machine/or1k/Makefile.am: New file.