@@ -1,3 +1,7 @@
+2014-08-18 Joel Sherrill <joel.sherrill@oarcorp.com>
+
+	* libc/include/sys/signal.h: Add sigaltstack() support.
+
 2014-08-14  Bin Cheng  <bin.cheng@arm.com>
 
 	* libc/stdio/findfp.c (std): Don't inline when optimizing for code size.
